changed images and links

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/img 1.png" width="360" alt="" /></li>
-          <li><img src="./images/img 2.png" width="360" alt="" /></li>
-          <li><img src="./images/img 3.png" width="360" alt="" /></li>
+          <li><img src="./images/img-1.png" width="360" alt="" /></li>
+          <li><img src="./images/img-2.png" width="360" alt="" /></li>
+          <li><img src="./images/img-3.png" width="360" alt="" /></li>
         </ul>
       </section>
     </div>
@@ -79,23 +79,23 @@
         <ul>
           <li>
             <img
-              src="./images/Team Card 1.png"
+              src="./images/Team-Card-1.png"
               width="264"
               alt="product designer"
             />
           </li>
           <li>
             <img
-              src="./images/Team Card 2.png"
+              src="./images/Team-Card-2.png"
               width="264"
               alt="frontend developer"
             />
           </li>
           <li>
-            <img src="./images/Team Card 3.png" width="264" alt="marketing" />
+            <img src="./images/Team-Card-3.png" width="264" alt="marketing" />
           </li>
           <li>
-            <img src="./images/Team Card 4.png" width="264" alt="ui designer" />
+            <img src="./images/Team-Card-4.png" width="264" alt="ui designer" />
           </li>
         </ul>
       </section>
