changed images png to jpg

--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
-    <div>
+    <main>
       <section>
         <h1>Effective Solutions For Your Business</h1>
-        <a href="">Order Service</a>
+        <button>Order Service</button>
       </section>
-    </div>
-    <div>
       <section>
         <ul>
           <li>
@@ -60,46 +58,42 @@
           </li>
         </ul>
       </section>
-    </div>
-    <!-- section What are we doing -->
-    <div>
+      <!-- section What are we doing -->
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/img-1.png" width="360" alt="" /></li>
-          <li><img src="./images/img-2.png" width="360" alt="" /></li>
-          <li><img src="./images/img-3.png" width="360" alt="" /></li>
+          <li><img src="./images/img-1.jpg" width="360" alt="monitor" /></li>
+          <li><img src="./images/img-2.jpg" width="360" alt="app" /></li>
+          <li><img src="./images/img-3.jpg" width="360" alt="telepnone" /></li>
         </ul>
       </section>
-    </div>
-    <!-- section Our Team -->
-    <div>
+      <!-- section Our Team -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="./images/Team-Card-1.png"
+              src="./images/Team-Card-1.jpg"
               width="264"
               alt="product designer"
             />
           </li>
           <li>
             <img
-              src="./images/Team-Card-2.png"
+              src="./images/Team-Card-2.jpg"
               width="264"
               alt="frontend developer"
             />
           </li>
           <li>
-            <img src="./images/Team-Card-3.png" width="264" alt="marketing" />
+            <img src="./images/Team-Card-3.jpg" width="264" alt="marketing" />
           </li>
           <li>
-            <img src="./images/Team-Card-4.png" width="264" alt="ui designer" />
+            <img src="./images/Team-Card-4.jpg" width="264" alt="ui designer" />
           </li>
         </ul>
       </section>
-    </div>
+    </main>
     <footer>
       <div>
         <a href="/">WEBSTUDIO</a>
