Corrected images, added Our Team descr

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -17,15 +17,25 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li>
+          <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </address>
+        </li>
+        <li>
+          <address>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </address>
+        </li>
       </ul>
     </header>
     <main>
+      <!--  section 1 -->
       <section>
-        <h1>Effective Solutions For Your Business</h1>
-        <button>Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
+      <!--  section 2 -->
       <section>
         <ul>
           <li>
@@ -38,7 +48,7 @@
           <li>
             <h3>Punctuality</h3>
             <p>
-              ring the key message to the brand's audience for the best price
+              Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
@@ -58,7 +68,7 @@
           </li>
         </ul>
       </section>
-      <!-- section What are we doing -->
+      <!-- section 3 What are we doing -->
       <section>
         <h2>What are we doing</h2>
         <ul>
@@ -67,36 +77,39 @@
           <li><img src="./images/img-3.jpg" width="360" alt="telepnone" /></li>
         </ul>
       </section>
-      <!-- section Our Team -->
+      <!-- section 4 Our Team -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/Team-Card-1.jpg"
-              width="264"
-              alt="product designer"
-            />
+            <img src="./images/Team-1.jpg" width="264" alt="product designer" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/Team-Card-2.jpg"
+              src="./images/Team-2.jpg"
               width="264"
               alt="frontend developer"
-            />
+            /> <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Team-Card-3.jpg" width="264" alt="marketing" />
+            <img src="./images/Team-3.jpg" width="264" alt="marketing" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Team-Card-4.jpg" width="264" alt="ui designer" />
+            <img src="./images/Team-4.jpg" width="264" alt="ui designer" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <div>
-        <a href="/">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
