--- a/index.html
+++ b/index.html
@@ -16,18 +16,10 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </address>
-        </li>
-        <li>
-          <address>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </address>
-        </li>
-      </ul>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </address>
     </header>
     <main>
       <!--  section 1 -->
@@ -37,6 +29,7 @@
       </section>
       <!--  section 2 -->
       <section>
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -91,7 +84,8 @@
               src="./images/Team-2.jpg"
               width="264"
               alt="frontend developer"
-            /> <h3>Tom Ford</h3>
+            />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -108,13 +102,11 @@
       </section>
     </main>
     <footer>
-      <div>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
