--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <ul>
           <li>
             <img src="./images/Team-1.jpg" width="264" alt="product designer" />
-            <h3>Mark Guerrero</h3>
+            <h3>Mark Morales</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -87,7 +87,7 @@
               width="264"
               alt="frontend developer"
             />
-            <h3>Tom Ford</h3>
+            <h3>Tom Nickson</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
